--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@visx/tooltip": "^1.7.2",
     "classnames": "^2.3.1",
     "d3-scale-chromatic": "^2.0.0",
+    "immer": "^9.0.2",
+    "infestines": "^0.4.11",
     "linear-algebra": "^3.1.4",
     "partial.lenses": "^14.17.0",
+    "prop-types": "^15.7.2",
     "ramda": "^0.27.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
