--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "infestines": "^0.4.11",
     "linear-algebra": "^3.1.4",
     "partial.lenses": "^14.17.0",
+    "partial.lenses.validation": "^2.0.0",
     "prop-types": "^15.7.2",
     "ramda": "^0.27.1",
     "react": "^17.0.2",
