--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^17.0.2",
     "react-fast-compare": "^3.2.0",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "uuid": "^8.3.2",
@@ -68,6 +69,7 @@
   "devDependencies": {
     "@craco/craco": "^6.1.2",
     "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
