--- a/package.json
+++ b/package.json
@@ -69,9 +69,12 @@
     "@visx/tooltip": "^1.7.2",
     "classnames": "^2.3.1",
     "d3-scale-chromatic": "^2.0.0",
+    "i18next": "^20.2.2",
+    "i18next-http-backend": "^1.2.2",
     "immer": "^9.0.2",
     "infestines": "^0.4.11",
     "jest-extended": "^0.11.5",
+    "kefir": "^3.8.8",
     "linear-algebra": "^3.1.4",
     "partial.lenses": "^14.17.0",
     "partial.lenses.validation": "^2.0.0",
@@ -79,21 +82,26 @@
     "ramda": "^0.27.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.3",
     "react-fast-compare": "^3.2.0",
+    "react-i18next": "^11.8.15",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "rxjs": "^7.0.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
     "@craco/craco": "^6.1.2",
     "@testing-library/react-hooks": "^5.1.2",
+    "@types/kefir": "^3.8.5",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^9.8.6",
     "cypress": "^7.2.0",
+    "dependency-cruiser": "^10.0.0",
     "eslint-plugin-cypress": "^2.11.3",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
