--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "rxjs": "^7.0.0",
+    "tailwindcss-interaction-variants": "^5.0.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
