--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "test": "craco test",
     "eject": "craco eject",
     "test:cov": "yarn test --coverage --watchAll=false",
-    "test:e2e": "cypress open"
+    "test:e2e": "cypress open",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "jest": {
     "coveragePathIgnorePatterns": [
@@ -33,6 +35,16 @@
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
     ]
   },
   "browserslist": {
@@ -99,6 +111,13 @@
   },
   "devDependencies": {
     "@craco/craco": "^6.1.2",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/node-logger": "^6.2.9",
+    "@storybook/preset-create-react-app": "^3.1.7",
+    "@storybook/react": "^6.2.9",
     "@testing-library/react-hooks": "^5.1.2",
     "@types/kefir": "^3.8.5",
     "@types/ramda": "^0.27.40",
@@ -109,6 +128,8 @@
     "dependency-cruiser": "^10.0.0",
     "eslint-plugin-cypress": "^2.11.3",
     "postcss": ">=8.2.10",
+    "postcss-import": "^14.0.2",
+    "postcss-nesting": "^8.0.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2",
     "typescript": "^4.2.4"
   }
