--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@visx/drag": "^1.7.4",
     "@visx/event": "^1.7.0",
     "@visx/glyph": "^1.7.0",
+    "@visx/grid": "^1.9.1",
     "@visx/group": "^1.7.0",
     "@visx/pattern": "^1.7.0",
     "@visx/point": "^1.7.0",
