--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "ts-toolbelt": "^9.6.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
