--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@visx/tooltip": "^1.7.2",
     "classnames": "^2.3.1",
     "d3-scale-chromatic": "^2.0.0",
+    "framer-motion": "^4.1.17",
     "i18next": "^20.2.2",
     "immer": "^9.0.2",
     "infestines": "^0.4.11",
@@ -108,6 +109,7 @@
     "cypress": "^7.2.0",
     "dependency-cruiser": "^10.0.0",
     "eslint-plugin-cypress": "^2.11.3",
+    "npmlog": "^4.1.2",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2",
     "tailwindcss-interaction-variants": "^5.0.0",
