--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "eslint-plugin-cypress": "^2.11.3",
     "npmlog": "^4.1.2",
     "postcss": "^7.0.35",
+    "resize-observer-polyfill": "^1.5.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2",
     "tailwindcss-interaction-variants": "^5.0.0",
     "typescript": "^4.2.4"
