chore: clean up redundant files

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "jest": {
     "coveragePathIgnorePatterns": [
+      "<rootDir>/src/reportWebVitals.js",
+      "<rootDir>/src/test-utils.js",
       "<rootDir>/src/core/data/(modules/)?index.js",
       "<rootDir>/src/schema",
       "<rootDir>/src/core/locales/.*js$",
