--- a/package.json
+++ b/package.json
@@ -28,13 +28,21 @@
     "deps:report-html": "depcruise-fmt -T err-html -f violations.html depcruise.json"
   },
   "jest": {
+    "testMatch": [
+      "!cypress/**/*",
+      "!**/test/**/*.[jt]s?(x)",
+      "**/__tests__/**/*.[jt]s?(x)",
+      "**/?(*.)+(spec|test).[jt]s?(x)"
+    ],
     "coveragePathIgnorePatterns": [
+      "<rootDir>/src/core/i18n.js",
+      "<rootDir>/src/test",
       "<rootDir>/src/reportWebVitals.js",
       "<rootDir>/src/test-utils.js",
       "<rootDir>/src/core/data/(modules/)?index.js",
       "<rootDir>/src/schema",
       "<rootDir>/src/core/locales/.*js$",
-      "<rootDir>/src/(canvas|layout|views(/modal)?|state|_)/index.js",
+      "<rootDir>/src/(components|canvas|layout|views(/modal)?|state|_)/index.js",
       "<rootDir>/src/.*(components|containers)/\\w+/index.js$",
       "typedefs?.js"
     ]
@@ -75,6 +83,7 @@
     "@visx/shape": "^1.8.0",
     "@visx/text": "^1.7.0",
     "@visx/tooltip": "^1.7.2",
+    "ajv": "^8.5.0",
     "classnames": "^2.3.1",
     "d3-scale-chromatic": "^2.0.0",
     "framer-motion": "^4.1.17",
@@ -86,6 +95,7 @@
     "linear-algebra": "^3.1.4",
     "partial.lenses": "^14.17.0",
     "partial.lenses.validation": "^2.0.0",
+    "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
     "ramda": "^0.27.1",
     "react": "^17.0.2",
@@ -108,6 +118,7 @@
     "@testing-library/react-hooks": "^5.1.2",
     "@testing-library/user-event": "^12.1.10",
     "@types/kefir": "^3.8.5",
+    "@types/prismjs": "^1.16.5",
     "@types/ramda": "^0.27.40",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
@@ -115,6 +126,8 @@
     "cypress": "^7.2.0",
     "dependency-cruiser": "^10.0.0",
     "eslint-plugin-cypress": "^2.11.3",
+    "intersection-observer": "^0.12.0",
+    "json-schema-to-typescript": "^10.1.4",
     "npmlog": "^4.1.2",
     "postcss": "^7.0.35",
     "resize-observer-polyfill": "^1.5.1",
