--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "dependencies": {
     "@headlessui/react": "^1.1.1",
     "@reduxjs/toolkit": "^1.5.1",
+    "@tailwindcss/typography": "^0.4.1",
     "@visx/annotation": "^1.9.0",
     "@visx/axis": "^1.10.0",
     "@visx/curve": "^1.7.0",
@@ -107,7 +108,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "remark-parse": "^9.0.0",
+    "remark-react": "^8.0.0",
     "ts-toolbelt": "^9.6.0",
+    "unified": "^9.2.1",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
@@ -123,6 +127,7 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^9.8.6",
+    "craco-raw-loader": "^1.0.1",
     "cypress": "^7.2.0",
     "dependency-cruiser": "^10.0.0",
     "eslint-plugin-cypress": "^2.11.3",
