ci: remove cypress for now to speed CI up

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "build": "craco build",
     "test": "craco test",
     "eject": "craco eject",
-    "test:cov": "yarn test --coverage --watchAll=false",
+    "test:cov": "npm run test --coverage --watchAll=false",
     "test:e2e": "cypress open",
-    "test:update-snapshots": "yarn test --watchAll=false -u",
+    "test:update-snapshots": "npm run test --watchAll=false -u",
     "deps:run": "depcruise -c .dependency-cruiser.js",
     "deps:validate": "npm run deps:run -- src/",
     "deps:save-cruise": "npm run deps:run -- -T json -f depcruise.json src/",
@@ -134,9 +134,7 @@
     "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^9.8.6",
     "craco-raw-loader": "^1.0.1",
-    "cypress": "^7.2.0",
     "dependency-cruiser": "^10.0.0",
-    "eslint-plugin-cypress": "^2.11.3",
     "intersection-observer": "^0.12.0",
     "json-schema-to-typescript": "^10.1.4",
     "npmlog": "^4.1.2",
