--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "sass": "^1.35.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "winston": "^3.3.3"
   }
 }
