build: add test libs, visx pattern

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@visx/group": "^1.7.0",
     "@visx/pattern": "^1.7.0",
     "@visx/responsive": "^1.10.1",
     "clsx": "^1.1.1",
@@ -52,5 +53,8 @@
     "sass": "^1.35.1",
     "web-vitals": "^1.0.1",
     "winston": "^3.3.3"
+  },
+  "devDependencies": {
+    "@testing-library/react-hooks": "^7.0.0"
   }
 }
