--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@visx/event": "^1.7.0",
     "@visx/group": "^1.7.0",
     "@visx/pattern": "^1.7.0",
     "@visx/responsive": "^1.10.1",
