feat(core): implement i18n

--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
     "@visx/pattern": "^1.7.0",
     "@visx/responsive": "^1.10.1",
     "clsx": "^1.1.1",
+    "i18next": "^20.3.2",
     "infestines": "^0.4.11",
     "normalize.css": "^8.0.1",
     "partial.lenses": "^14.17.0",
     "ramda": "^0.27.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.11.0",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "sass": "^1.35.1",
