--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "test:cov": "yarn test --coverage --watchAll=false"
+    "test:cov": "yarn test --coverage --watchAll=false",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -35,6 +37,16 @@
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
     ]
   },
   "browserslist": {
@@ -63,6 +75,7 @@
     "infestines": "^0.4.11",
     "normalize.css": "^8.0.1",
     "partial.lenses": "^14.17.0",
+    "prop-types": "^15.7.2",
     "ramda": "^0.27.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -74,6 +87,12 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^6.3.2",
+    "@storybook/addon-essentials": "^6.3.2",
+    "@storybook/addon-links": "^6.3.2",
+    "@storybook/node-logger": "^6.3.2",
+    "@storybook/preset-create-react-app": "^3.1.7",
+    "@storybook/react": "^6.3.2",
     "@testing-library/react-hooks": "^7.0.0"
   }
 }
