chore: add JSX to coverage ignore for now

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "collectCoverageFrom": [
       "!**/*.d.ts",
       "!src/(components|containers|state|common|core|views)/**/index.js",
+      "!**/*.jsx",
       "!**/*.json"
     ]
   },
